Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Rap-green by dufayard</title>
+    <meta name="description" content="Rap-green : Automatically exported from code.google.com/p/rap-green">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Rap-green</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Rap-green</h1>
-        <p>Automatically exported from code.google.com/p/rap-green</p>
 
-        <p class="view"><a href="https://github.com/dufayard/rap-green">View the Project on GitHub <small>dufayard/rap-green</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/dufayard/rap-green">View on GitHub</a>
 
+          <h1 id="project_title">Rap-green</h1>
+          <h2 id="project_tagline">Automatically exported from code.google.com/p/rap-green</h2>
 
-        <ul>
-          <li><a href="https://github.com/dufayard/rap-green/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/dufayard/rap-green/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/dufayard/rap-green">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/dufayard/rap-green/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/dufayard/rap-green/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p>RAP-Green is a new implementation and an improvment of the RAP software (<a href="http://pbil.univ-lyon1.fr/software/RAP/RAP.htm">http://pbil.univ-lyon1.fr/software/RAP/RAP.htm</a>), which permits to compare gene and species trees, infers duplication events, and provide confidence score in function conservation between genes.</p>
 
 <p>Afterwards, it became a development plateform, to implement several phylogenetic tree analysis softwares.</p>
@@ -60,11 +63,13 @@
 
 <p>Documentation is yet to be improved.</p>
 
-<p>For a command line option description: 
-<a href="http://code.google.com/p/rap-green/wiki/CommandLineDocumentation">http://code.google.com/p/rap-green/wiki/CommandLineDocumentation</a></p>
+<p>For a command line option description:</p>
 
-<p>For a code documentation: 
-<a href="http://rap-green.googlecode.com/svn/doc/index.html">http://rap-green.googlecode.com/svn/doc/index.html</a></p>
+<p><a href="http://code.google.com/p/rap-green/wiki/CommandLineDocumentation">http://code.google.com/p/rap-green/wiki/CommandLineDocumentation</a></p>
+
+<p>For a code documentation: </p>
+
+<p><a href="http://rap-green.googlecode.com/svn/doc/index.html">http://rap-green.googlecode.com/svn/doc/index.html</a></p>
 
 <p>Issues ares managed from another system hosted by the CIRAD, but the issue manager here can be used as a public entry point.</p>
 
@@ -102,14 +107,19 @@
 
 <hr>
 
-<p>Project was formerly supported by http://www-helix.inrialpes.fr/ Helix project, and http://lbbe.univ-lyon1.fr/ LBBE, and is now supported by the http://umr-agap.cirad.fr/ UMR AGAP and project [<a href="http://ancestrome.univ-lyon1.fr/">http://ancestrome.univ-lyon1.fr/</a> Ancestrome].</p>
+<p>Project was formerly supported by <a href="http://www-helix.inrialpes.fr/old/">Helix INRIA project</a>, and <a href="http://lbbe.univ-lyon1.fr/">LBBE</a>, and is now supported by the <a href="http://umr-agap.cirad.fr/">UMR AGAP</a> (<a href="http://www.cirad.fr">CIRAD</a>) and project <a href="http://ancestrome.univ-lyon1.fr/">Ancestrome</a>.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/dufayard">dufayard</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Rap-green maintained by <a href="https://github.com/dufayard">dufayard</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
