Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,13 +63,11 @@
 
 <p>Documentation is yet to be improved.</p>
 
-<p>For a command line option description:</p>
+<p>For a command line option description:
+<a href="http://code.google.com/p/rap-green/wiki/CommandLineDocumentation">http://code.google.com/p/rap-green/wiki/CommandLineDocumentation</a></p>
 
-<p><a href="http://code.google.com/p/rap-green/wiki/CommandLineDocumentation">http://code.google.com/p/rap-green/wiki/CommandLineDocumentation</a></p>
-
-<p>For a code documentation: </p>
-
-<p><a href="http://rap-green.googlecode.com/svn/doc/index.html">http://rap-green.googlecode.com/svn/doc/index.html</a></p>
+<p>For a code documentation: 
+<a href="http://rap-green.googlecode.com/svn/doc/index.html">http://rap-green.googlecode.com/svn/doc/index.html</a></p>
 
 <p>Issues ares managed from another system hosted by the CIRAD, but the issue manager here can be used as a public entry point.</p>
 
@@ -119,7 +117,17 @@
       </footer>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-25970921-3");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
 
   </body>
 </html>
