Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Rap-green : Automatically exported from code.google.com/p/rap-green">
+    <meta name="description" content="Rap-green : A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/dufayard/rap-green">View on GitHub</a>
 
           <h1 id="project_title">Rap-green</h1>
-          <h2 id="project_tagline">Automatically exported from code.google.com/p/rap-green</h2>
+          <h2 id="project_tagline">A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/dufayard/rap-green/zipball/master">Download this project as a .zip file</a>
