Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Rap-green : A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)">
 
-  <title>Rap-green</title>
-  <meta name="description" content="A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Rap-green</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/dufayard/rap-green">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Rap-green</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/dufayard/rap-green/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/dufayard/rap-green/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/dufayard/rap-green" class="code">View Rap-green on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <p>RAP-Green is a new implementation and an improvment of the RAP software (<a href="http://pbil.univ-lyon1.fr/software/RAP/RAP.htm">http://pbil.univ-lyon1.fr/software/RAP/RAP.htm</a>), which permits to compare gene and species trees, infers duplication events, and provide confidence score in function conservation between genes.</p>
+          <h1 id="project_title">Rap-green</h1>
+          <h2 id="project_tagline">A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/dufayard/rap-green/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/dufayard/rap-green/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>RAP-Green is a new implementation and an improvment of the RAP software (<a href="http://pbil.univ-lyon1.fr/software/RAP/RAP.htm">http://pbil.univ-lyon1.fr/software/RAP/RAP.htm</a>), which permits to compare gene and species trees, infers duplication events, and provide confidence score in function conservation between genes.</p>
 
 <p>Afterwards, it became a development plateform, to implement several phylogenetic tree analysis softwares.</p>
 
@@ -69,7 +64,7 @@
 <p>Documentation is yet to be improved.</p>
 
 <p>For a command line option description:
-<a href="http://code.google.com/p/rap-green/wiki/CommandLineDocumentation">http://code.google.com/p/rap-green/wiki/CommandLineDocumentation</a></p>
+<a href="https://github.com/dufayard/rap-green/wiki/%22RapGreen%22-reconciliation-command-line-documentation">https://github.com/dufayard/rap-green/wiki/%22RapGreen%22-reconciliation-command-line-documentation</a></p>
 
 <p>For a code documentation: 
 <a href="http://rap-green.googlecode.com/svn/doc/index.html">http://rap-green.googlecode.com/svn/doc/index.html</a></p>
@@ -111,27 +106,18 @@
 <hr>
 
 <p>Project was formerly supported by <a href="http://www-helix.inrialpes.fr/old/">Helix INRIA project</a>, and <a href="http://lbbe.univ-lyon1.fr/">LBBE</a>, and is now supported by the <a href="http://umr-agap.cirad.fr/">UMR AGAP</a> (<a href="http://www.cirad.fr">CIRAD</a>) and project <a href="http://ancestrome.univ-lyon1.fr/">Ancestrome</a>.</p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/dufayard" class="avatar"><img src="https://avatars0.githubusercontent.com/u/11456267?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/dufayard">dufayard</a> maintains <a href="https://github.com/dufayard/rap-green">Rap-green</a></p>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Rap-green maintained by <a href="https://github.com/dufayard">dufayard</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/dufayard/rap-green/tarball/master" class="tar">tar</a><a href="https://github.com/dufayard/rap-green/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-            <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
@@ -142,5 +128,6 @@
             } catch(err) {}
           </script>
 
-</body>
+
+  </body>
 </html>
