--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dufayard/rap-green">View on GitHub</a>
-
+<table border=0><hr>
+<td>ECHO</td>
+<td>
           <h1 id="project_title">Rap-green</h1>
           <h2 id="project_tagline">A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)</h2>
-
+</td>
+</hr></table>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/dufayard/rap-green/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/dufayard/rap-green/tarball/master">Download this project as a tar.gz file</a>
