--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dufayard/rap-green">View on GitHub</a>
           
-<img align="left" src="images/LOGO_RAP.png">
+<img align="left" border="0" src="images/LOGO_RAP.png">
           <h1 id="project_title">Rap-green</h1>
           <h2 id="project_tagline">A phylogenetic tree analysis package (species/gene tree reconciliation, tree pattern matching, Javascript interfaces ...)</h2>
             <section id="downloads">
