--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <hr>
 
-<p><em>ABOUT TREE PATTERN MATCHING</em></p>
+<p><em>ABOUT TREE PATTERN MATCHING AND TREE DISPLAY</em></p>
 
 <p>Tree pattern matching is a way to explore a large library of phylogenetic trees, extracting those which contain specific phylogenetic patterns.</p>
 
