--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <p>Tree pattern matching facilities are in constant development, and are not intended to be easily installed and adapted to a tree repository. The installation of this system in your environment should be the occasion of a collaboration. </p>
 
+<p>A tutorial to install a phylogenetic tree pattern matching serice is available&nbsp;<a href="https://github.com/SouthGreenPlatform/rap-green/wiki/How-to-install-a-phylogenetic-tree-pattern-matching-service">here using GitHub wiki</a></p>
+
 <hr>
 
 <p><em>ABOUT TREE RECONCILIATION:</em></p>
