--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 
 <p>Tree pattern matching is a way to explore a large library of phylogenetic trees, extracting those which contain specific phylogenetic patterns.</p>
 
-<p>Tree pattern matching facilities are in constant development, and are not intended to be easily installed and adapted to a tree repository. The installation of this system in your environment should be the occasion of a collaboration. </p>
+<p>Tree pattern matching facilities are in constant development. The installation of this system in your environment should be the occasion of a collaboration. </p>
+
+<p>A complete service is composed with 3 modules: a web tree displayer (InTreeGreat, in the treedisplay directory), a tree pattern editor (in the treepattern directory), and a tree pattern matching daemon running in a accessible server (in the rapgreen Java package).</p>
 
 <p>A tutorial to install a phylogenetic tree pattern matching service is available&nbsp;<a href="https://github.com/SouthGreenPlatform/rap-green/wiki/How-to-install-a-phylogenetic-tree-pattern-matching-service">here using GitHub wiki</a></p>
 
