--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p><em>PLEASE CITE:</em></p>
 
-<p><a href="http://bioinformatics.oxfordjournals.org/content/21/11/2596.short">http://bioinformatics.oxfordjournals.org/content/21/11/2596.short</a></p>
+<p><a href="https://doi.org/10.1093/nargab/lqab088">https://doi.org/10.1093/nargab/lqab088/a></p>
 
 <hr>
 
